--- a/scss/modules/questions.scss
+++ b/scss/modules/questions.scss
@@ -71,6 +71,11 @@ details > summary {
   }
 }
 
+.text-container {
+  margin: 8.75rem 1.5rem 5rem;
+  padding-bottom: 4rem;
+}
+
 .title {
   margin: 5px 15px;
 }
